setting child projects to local url

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Polyglotted Org
 <div id="home">
   <h1>Polyglotted Open Source Projects</h1>
   <ul class="posts">
-    <li><a href="http://github.com/polyglotted/xpath-stax/">xpath-stax:</a> XPath expression markup built on top of StAX streaming parser</li>
+    <li><a href="/xpath-stax/">xpath-stax:</a> XPath expression markup built on top of StAX streaming parser</li>
   </ul>
 
   <h1>Blog Posts</h1>
