added webapp-launcher to the index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Polyglotted Org
   <h1>Polyglotted Open Source Projects</h1>
   <ul class="posts">
     <li><a href="/xpath-stax/">xpath-stax:</a> XPath expression markup built on top of StAX streaming parser</li>
+    <li><a href="/webapp-launcher/">webapp-launcher:</a> Launch an in-process web application using Jetty</li>
   </ul>
 
   <h1>Blog Posts</h1>
