updating the new site

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Polyglotted Org
+title: Polyglotted IO
 ---
 
 <div id="home">
   <h1>Polyglotted Open Source Projects</h1>
   <ul class="posts">
+    <li><a href="/app-launcher/">app-launcher:</a> Launch an in-process application</li>
     <li><a href="/xpath-stax/">xpath-stax:</a> XPath expression markup built on top of StAX streaming parser</li>
-    <li><a href="/webapp-launcher/">webapp-launcher:</a> Launch an in-process web application using Jetty</li>
   </ul>
 
   <h1>Blog Posts</h1>
